# ACT-agents

./: README.md  pyproject.toml
src/act_agents/: crew.py  main.py
src/act_agents/config/: agents.yaml  tasks.yaml
